set(srcs "m5button.c"
         "m5display.c"
         "m5event.c"
         "m5led.c"
         "m5power.c"
         "m5stickc.c"
		 "util/spi_master_lobo.c"
		 "util/tft.c"
		 "util/tftspi.c"
		 "util/font/comic24.c"
		 "util/font/def_small.c"
		 "util/font/default_tiny_9pt.c"
		 "util/font/DefaultFont.c"
		 "util/font/DejaVuSans18.c"
		 "util/font/DejaVuSans24.c"
		 "util/font/minya24.c"
		 "util/font/SmallFont.c"
		 "util/font/tooney32.c"
		 "util/font/Ubuntu16.c")

idf_component_register(SRCS "${srcs}"
                       INCLUDE_DIRS "include" "util"
                      )
